Fix badges z-index

--- a/src/components/Badges/Badges.css
+++ b/src/components/Badges/Badges.css
@@ -12,7 +12,7 @@
 
 .feather {
   content: "";
-  z-index: 50;
+  z-index: 3;
   display: block;
   position: absolute;
   top: 0;
